# pacs-rag

./: README.md  pyproject.toml
pacs_rag/: __init__.py  cli.py  embedder.py  index.py  ingest.py  lexicon.py  mcp_client.py  retrieve.py
pacs_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ingest_mcp.py  test_mcp_client_retry.py  test_retrieve.py
